i fixed dark mode and i made the navbar look nooice

--- a/XBCADAttendance/wwwroot/css/Lecturer.css
+++ b/XBCADAttendance/wwwroot/css/Lecturer.css
@@ -41,6 +41,7 @@ body.dark {
 body {
     background: var(--grey);
     overflow-x: hidden;
+    transition: none;
 }
 
 ul {
